--- a/src/variables.scss
+++ b/src/variables.scss
@@ -23,6 +23,7 @@ $error: #D80000;
 
 // CONTAINER PARAMS
 $container-width: 1208px;
+$container-width-desktop: 728px;
 
 
 // FONTS
@@ -31,6 +32,8 @@ $text-bold: 'Roboto', sans-serif;
 $text-header: 'Rubik', sans-serif;
 
 // TEXT SIZE
+
+// DESKTOP
 $text-xs: 12px;
 $text-s: 16px;
 $text-m: 18px;
@@ -48,6 +51,25 @@ $text-header-s: 24px;
 $text-header-m: 36px;
 $text-header-l: 48px;
 $text-header-xl: 64px;
+
+// MOBILE
+$m-text-xs: 8px;
+$m-text-s: 12px;
+$m-text-m: 14px;
+$m-text-l: 20px;
+$m-text-xl: 32px;
+
+$m-text-bold-xs: 8px;
+$m-text-bold-s: 12px;
+$m-text-bold-m: 14px;
+$m-text-bold-l: 20px;
+$m-text-bold-xl: 32px;
+
+$m-text-header-xs: 16px;
+$m-text-header-s: 20px;
+$m-text-header-m: 24px;
+$m-text-header-l: 36px;
+$m-text-header-xl: 48px;
 
 // TEXT WEIGHT
 $text-regular: 400;
