feat: dev of the navbar continues; added login window (1/n)

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,9 +1,11 @@
 // MAIN COLORS
 $background: #F4F4F2;
+$background-main: #FBF8EC;
 $background-text: #291E0F;
 $surface: #FFFFFF;
 $surface-text: #414141;
 $primary: #FF6633;
+$primary-muted: #FCD5BA;
 $primary-text: #FFFFFF;
 $secondary: #70C05B;
 $secondary-text: #FFFFFF;
@@ -50,8 +52,8 @@ $text-header-l: 48px;
 $text-header-xl: 64px;
 
 // TEXT WEIGHT
-$text-regular: 400;
-$text-bold: 700;
+$w-text-regular: 400;
+$w-text-bold: 700;
 
 
 // SHADOWS
