--- a/src/commons/Navbar/Navbar.module.scss
+++ b/src/commons/Navbar/Navbar.module.scss
@@ -1,6 +1,9 @@
 @import '../../variables.scss';
 
 .closeDropDown {
+  top: 105px;
+  left: 0;
+  position: absolute;
   height: 100vh;
   width: 100vw;
 }
@@ -16,6 +19,7 @@
   justify-content: space-between;
   margin: 0 auto;
   max-width: $container-width;
+  
 }
 
 .logo {
@@ -58,7 +62,7 @@
       margin-right: 8px;
       line-height: 24px;
       font-family: $text;
-      font-weight: $text-regular;
+      font-weight: $w-text-regular;
       color: $secondary-text;
     }
     &Drop {
@@ -69,10 +73,11 @@
       flex-direction: column;
       background-color: $surface;
       box-shadow: $shadow-m;
+      z-index: 99;
       &__link {
         margin-bottom: 24px;
         font-family: $text;
-        font-weight: $text-regular;
+        font-weight: $w-text-regular;
         font-size: $text-s;
         color: $surface-text;
         line-height: 24px;
@@ -98,7 +103,7 @@
       border: none;
       outline: none;
       font-family: $text;
-      font-weight: $text-regular;
+      font-weight: $w-text-regular;
       font-size: $text-s;
       color: $surface-text;
       caret-color: $surface-text;
@@ -137,7 +142,7 @@
     }
     &__text {
       font-family: $text;
-      font-weight: $text-regular;
+      font-weight: $w-text-regular;
       font-size: $text-xs;
       color: $surface-text;
       &_active {
@@ -176,7 +181,7 @@
         margin-right: 23.5px;
         width: 85px;
         font-family: $text;
-        font-weight: $text-regular;
+        font-weight: $w-text-regular;
         font-size: $text-s;
         color: $surface-text;
       }
@@ -195,7 +200,7 @@
       &__text {
         width: 143px;
         font-family: $text;
-        font-weight: $text-regular;
+        font-weight: $w-text-regular;
         font-size: $text-s;
         color: $surface-text;
       }
@@ -214,8 +219,110 @@
     width: 109px; 
     text-align: center;
     font-family: $text;
-    font-weight: $text-regular;
+    font-weight: $w-text-regular;
     font-size: $text-s;
     color: $primary-text
+  }
+  &Window {
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba($primary-muted, 0.8);
+    position: absolute;
+    z-index: 999;
+    &Container {
+      padding: 72px 80px 40px;
+      top: 50%;
+      left: 50%;
+      margin-left: -12em;
+      margin-top: -12em;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      position: absolute;
+      background-color: #fff;
+      border-radius: 4px;
+      &__close {
+        top: 0;
+        right: 0;
+        padding: 8px; 
+        position: absolute;
+        background-color: $lightest;
+        border-radius: 4px;
+        fill: $surface-text;
+        cursor: pointer;
+      }
+      &__title {
+        margin-bottom: 32px;
+        font-family: $text-header;
+        font-weight: $w-text-bold;
+        font-size: $text-header-s;
+        color: $surface-text;
+      }
+      &Input {
+        margin-bottom: 32px;
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        &__text {
+          font-family: $text;
+          font-weight: $w-text-regular;
+          font-size: $text-m;
+          color: $hard;
+        }
+        &__input {
+          padding: 12px 16px;
+          font-family: $text;
+          font-weight: $w-text-regular;
+          font-size: $text-l;
+          color: $surface-text;
+          line-height: 36px;
+          border: 1px solid $secondary;
+          caret-color: $secondary;
+          border-radius: 4px;
+          width: 260px;
+          &:focus {
+            border-color: $secondary;
+            box-shadow: $shadow-secondary-m;
+            outline: none;
+          }
+        }
+      }
+      &__btn {
+        margin-bottom: 32px;
+        padding: 16px 120px;
+        font-family: $text;
+        font-weight: $w-text-regular;
+        font-size: $text-l;
+        color: $primary;
+        background-color: $primary-muted;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+      &Nav {
+        display: flex;
+        &__registerBtn {
+          padding: 4px 8px;
+          font-family: $text;
+          font-weight: $w-text-regular;
+          font-size: $text-xs;
+          color: $secondary;
+          line-height: 18px;
+          text-decoration: none;
+          border: 1px solid $secondary;
+          border-radius: 4px;
+        }
+        &__remoteNav {
+          padding: 4px 8px;
+          font-family: $text;
+          font-weight: $w-text-regular;
+          font-size: $text-xs;
+          color: $hardest;
+          line-height: 18px;
+          text-decoration: none;
+        }
+      }
+    }
   }
 }
