feat: now API errors appear in own modal window

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -21,6 +21,8 @@ $success: #008C49;
 $info: #1CB9FC;
 $warning: #FCA21C;
 $error: #D80000;
+$on-error: #F2F2F2;
+$on-success: #F2F2F2;
 
 
 // CONTAINER PARAMS
