feat: added main page

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,6 +2,7 @@
 $background: #F4F4F2;
 $background-main: #FBF8EC;
 $background-text: #291E0F;
+$footer-color: #F9F4E2;
 $surface: #FFFFFF;
 $surface-text: #414141;
 $primary: #FF6633;
