--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,15 +1,8 @@
 @import '../../variables.scss';
 
-.closeDropDown {
-  top: 105px;
-  left: 0;
-  position: absolute;
-  height: 100vh;
-  width: 100vw;
-}
-
 .navbar {
-  padding: 30px 0;
+  margin-bottom: 4px;
+  padding: 16px 0;
   box-shadow: $shadow-s;
 }
 
