feat: added favorite page

--- a/src/commons/Category/Category.module.scss
+++ b/src/commons/Category/Category.module.scss
@@ -31,6 +31,9 @@
         width: 120px;
         text-decoration: none;
       }
+      .markRight {
+        fill: $surface-text;
+      }
     }
   }
   .cards {
