--- a/src/commons/Card/Card.module.scss
+++ b/src/commons/Card/Card.module.scss
@@ -32,6 +32,10 @@
       background-color: rgba($lightest, 0.5);
       border-radius: 4px;
       cursor: pointer;
+      &_active {
+        fill: $primary;
+        background-color: rgba($primary-muted, 0.5);
+      }
     }
     .productImage {
       height: 160px;
@@ -52,6 +56,8 @@
   }
   .block{
     padding: 8px;
+    display: flex;
+    flex-direction: column;
     .count {
       margin-bottom: 8px;
       display: flex;
@@ -92,6 +98,7 @@
     .productName {
       margin: 0;
       margin-bottom: 8px;
+      height: 48px;
       font-family: $text;
       font-weight: $w-text-regular;
       font-size: $text-s;
