--- a/src/commons/Content/Content.module.scss
+++ b/src/commons/Content/Content.module.scss
@@ -1,3 +1,13 @@
+@import 'variables.scss';
+
 .content {
-  padding: 80px 0;
+  padding-bottom: 80px;
+  .title {
+    margin-bottom: 60px;
+    font-family: $text-header;
+    font-weight: $w-text-bold;
+    font-size: $text-header-xl;
+    line-height: 96px;
+    color: $surface-text;
+  }
 }
