--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -23,6 +23,9 @@
         &:last-child {
           margin-right: 0;
         }
+        &:hover {
+          color: $primary;
+        }
       }
     }
     .socialLinks {
