--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap');
+
 // MAIN COLORS
 $background: #F4F4F2;
 $background-main: #FBF8EC;
