--- a/src/commons/Content/Content.module.scss
+++ b/src/commons/Content/Content.module.scss
@@ -2,6 +2,7 @@
 
 .content {
   padding-bottom: 80px;
+  position: relative;
   .title {
     margin-bottom: 60px;
     font-family: $text-header;
@@ -9,5 +10,18 @@
     font-size: $text-header-xl;
     line-height: 96px;
     color: $surface-text;
+  }
+  .amountBasketProducts {
+    top: 0;
+    left: 300px;
+    padding: 4px 8px;
+    position: absolute;
+    font-family: $text;
+    font-weight: $w-text-regular;
+    font-size: $text-s;
+    line-height: 24px;
+    color: $primary-text;
+    background-color: $primary;
+    border-radius: 4px;
   }
 }
