--- a/src/commons/Card/Card.module.scss
+++ b/src/commons/Card/Card.module.scss
@@ -39,6 +39,7 @@
     }
     .productImage {
       height: 160px;
+      cursor: pointer;
     }
     .discount {
       padding: 4px 8px;
@@ -107,15 +108,6 @@
     }
     .rating {
       margin-bottom: 8px; 
-      display: flex;
-      align-items: center;
-      .rate {
-        margin-right: 4px;
-        fill: $light;
-        &_active {
-          fill: $primary;
-        }
-      }
     }
     .button {
       padding: 8px 0;
