--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@ body {
   overflow-x: hidden;
 }
 
+h1, h2, p {
+  margin: 0;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
