--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -9,3 +9,19 @@
     background-color: #fff;
   }
 }
+
+@media only screen and (max-width: 992px) {
+  .main {
+    .banner {
+      height: 160px;
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .main {
+    .banner {
+      height: 80px;
+    }
+  }
+}
