--- a/src/variables.scss
+++ b/src/variables.scss
@@ -57,6 +57,25 @@ $text-header-m: 36px;
 $text-header-l: 48px;
 $text-header-xl: 64px;
 
+// MOBILE TEXT SIZE
+$m-text-xs: 8px;
+$m-text-s: 12px;
+$m-text-m: 14px;
+$m-text-l: 20px;
+$m-text-xl: 32px;
+
+$m-text-bold-xs: 8px;
+$m-text-bold-s: 12px;
+$m-text-bold-m: 14px;
+$m-text-bold-l: 20px;
+$m-text-bold-xl: 32px;
+
+$m-text-header-xs: 16px;
+$m-text-header-s: 20px;
+$m-text-header-m: 24px;
+$m-text-header-l: 36px;
+$m-text-header-xl: 48px;
+
 // TEXT WEIGHT
 $w-text-regular: 400;
 $w-text-bold: 700;
