--- a/src/commons/Content/Content.module.scss
+++ b/src/commons/Content/Content.module.scss
@@ -26,3 +26,24 @@
     border-radius: 4px;
   }
 }
+
+@media only screen and (max-width: 992px) {
+  .content {
+    padding-bottom: 60px;
+    .title {
+      margin-bottom: 40px;
+      font-family: $text-header-m;
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .content {
+    padding-bottom: 40px;
+    .title {
+      margin-bottom: 32px;
+      font-family: $m-text-header-l;
+      line-height: 54px;
+    }
+  }
+}
