--- a/src/components/Catalog/Product/ProductInfo/Ratings/InputRate/InputRate.module.scss
+++ b/src/components/Catalog/Product/ProductInfo/Ratings/InputRate/InputRate.module.scss
@@ -22,6 +22,7 @@
         padding: 0 2px;
         fill: $light;
         cursor: pointer;
+        transition: fill .16s ease-in;
         &:first-child {
           padding-left: 0;
         }
@@ -69,6 +70,23 @@
       color: $primary;
       background-color: $primary-muted;
       cursor: not-allowed;
+    }
+  }
+}
+
+@media only screen and (max-width: 1230px) {
+  .inputRate {
+    .input {
+      width: 544px;
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .inputRate {
+    .input {
+      margin-bottom: 8px;
+      width: 302px;
     }
   }
 }
