--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -12,7 +12,6 @@
   justify-content: space-between;
   margin: 0 auto;
   max-width: $container-width;
-  
 }
 
 .logo {
@@ -26,5 +25,22 @@
   &__text {
     height: 100.38px;
     height: 10.01px;
+  }
+}
+
+@media only screen and (max-width: 1230px) {
+  .container {
+    padding: 0 20px;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .logo {
+    &__icon {
+      margin-right: 0;
+    }
+    &__text {
+      display: none;
+    }
   }
 }
