--- a/src/pages/Basket/Basket.module.scss
+++ b/src/pages/Basket/Basket.module.scss
@@ -2,3 +2,9 @@
   display: flex;
   justify-content: space-between;
 }
+
+@media only screen and (max-width: 768px) {
+  .basket {
+    flex-direction: column;
+  }
+}
