feat: now error and success notifications are separate

--- a/src/commons/Notification/Notification.module.scss
+++ b/src/commons/Notification/Notification.module.scss
@@ -1,7 +1,7 @@
 @import 'variables.scss';
 
 .notification {
-  position: absolute;
+  position: fixed;
   top: 15px;
   right: 50%;
   transform:translate(50%, 0);
