feat: did pages for links which are located in footer; also did adaptive for them

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -13,6 +13,7 @@ $primary-muted: #FCD5BA;
 $primary-text: #FFFFFF;
 $secondary: #70C05B;
 $secondary-text: #FFFFFF;
+$secondary-muted: #E5FFDE;
 
 // GRAYSCALE
 $lightest: #F3F2F1;
