--- a/src/commons/Content/Content.module.scss
+++ b/src/commons/Content/Content.module.scss
@@ -6,6 +6,8 @@
   position: relative;
   .title {
     margin-bottom: 60px;
+    position: relative;
+    z-index: 2;
     font-family: $text-header;
     font-weight: $w-text-bold;
     font-size: $text-header-xl;
@@ -43,6 +45,16 @@
     .title {
       margin-bottom: 32px;
       font-family: $m-text-header-l;
+      line-height: 54px;
+    }
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .content {
+    .title {
+      margin-bottom: 4px;
+      font-size: $m-text-header-l;
       line-height: 54px;
     }
   }
