--- a/src/commons/Card/Card.module.scss
+++ b/src/commons/Card/Card.module.scss
@@ -6,7 +6,6 @@
   background-color: #fff;
   border-radius: 4px;
   box-shadow: $shadow-xs;
-  // width: 272px;
   transition: box-shadow .16s ease-in-out;
   &:hover {
     box-shadow: $shadow-primary-m;
@@ -22,7 +21,6 @@
     position: relative;
     display: flex;
     justify-content: center;
-    // width: 272px;
     height: 160px;
     .favorite {
       padding: 4px;
@@ -39,7 +37,8 @@
       }
     }
     .productImage {
-      height: 160px;
+      object-fit: contain;
+      max-width: 272px;
       cursor: pointer;
     }
     .discount {
@@ -154,24 +153,21 @@
   }
 }
 
-// @media only screen and (max-width: 992px) {
-//   .card {
-//     width: 224px;
-//     .image {
-//       width: 224px;
-//     }
-//   }
-// }
+@media only screen and (max-width: 992px) {
+  .card {
+    .image {
+      .productImage {
+        max-width: 224px;
+      }
+    }
+  }
+}
 
 @media only screen and (max-width: 768px) {
   .card {
-    // width: 160px;
-    // .image {
-    //   width: 160px;
-    // }
-    .block {
-      .productName {
-        // height: 90px;
+    .image {
+      .productImage {
+        max-width: 160px;
       }
     }
   }
