--- a/src/commons/Content/Content.module.scss
+++ b/src/commons/Content/Content.module.scss
@@ -44,8 +44,8 @@
     padding-bottom: 40px;
     .title {
       margin-bottom: 32px;
-      font-family: $m-text-header-l;
-      line-height: 54px;
+      font-size: $m-text-header-l;
+      line-height: 30px;
     }
   }
 }
@@ -55,7 +55,13 @@
     .title {
       margin-bottom: 4px;
       font-size: $m-text-header-l;
-      line-height: 54px;
+      line-height: 35px;
+    }
+    .amountBasketProducts {
+      padding: 2px 4px;
+      left: 165px;
+      font-size: $m-text-s;
+      line-height: 18px;
     }
   }
 }
