--- a/src/commons/Filter/Filter.module.scss
+++ b/src/commons/Filter/Filter.module.scss
@@ -127,7 +127,11 @@
 
 @media only screen and (max-width: 992px) {
   .filter {
+    margin-top: 40px;
     margin-right: 0;
     margin-bottom: 32px;
+  }
+  .openBtn {
+    margin-top: 40px;
   }
 }
